<resources>
    <string name="app_name">HABLAN</string>

    <string name="title_activity_semantica">Semántica</string>
    <string name="title_activity_pragmatica">Pragmática</string>
    <string name="title_activity_asociacion">Asociación</string>
    <string name="title_activity_intruso">Intruso semántico</string>
    <string name="title_activity_identificacion">Identificación/Definición de atributos</string>
    <string name="title_activity_lectura">Lectura</string>
    <string name="title_activity_discriminacion">Discriminación auditiva</string>
    <string name="title_activity_denominacion">Denominación</string>
    <string name="title_activity_verdaderofalso">Verdadero o falso</string>
    <string name="title_activity_unirconflechas">Unir con flechas</string>

    <string name="textTitleAbout">
        <strong>Idea y desarrollo</strong>
    </string>

    <string name="textAbout">
        Maria Agustina Caraballo\n
        Agustín Nicolás Bruno Lavista\n
        Agustín Cesar Dorigo\n
        Andrea Lanaro\n
        Macarena Martínez Cuitiño\n
    </string>

    <string name="textAbout1">
        Dolores Zamora\n
        Macarena Canga\n
        Agustina Peccin\n
        Celeste Berardo\n
    </string>

    <string name="textAbout2">
        Daniela Szenkman\n
        Vanina García\n
        Brenda Steeb\n
    </string>

    <string name="textAbout3">
        Geraldine Borovinsky\n
        Federico Soriano\n
        Lucas Collazo\n
        Marianela F. Cruz Labonia\n
        Julieta Fumagalli\n
    </string>

    <string name="incorrectAns">Incorrecto</string>
    <string name="buttonTryAgain">Reintentar</string>

    <string name="correctAns">Correcto</string>
    <string name="buttonNext">Siguiente</string>

    <string name="levelCompleted">Nivel completado</string>
    <string name="buttonNextLevel">Siguiente nivel</string>
    <string name="buttonReset">Reset</string>

    <string name="buttonModules">Iniciar</string>
    <string name="buttonSettings">Configuración</string>
    <string name="buttonExit">Salir</string>

    <string name="title_activity_settings">Configuración</string>
    <string name="titleConfiguration">Configuración de la aplicación</string>
    <string name="hintPIN">PIN de seguridad</string>
    <string name="buttonLoginBack">Menú principal</string>
    <string name="buttonLoginNext">Acceder</string>

    <string name="title_activity_categories">Categorías</string>
    <string name="textNoCategories">No hay categorías</string>

    <string name="title_activity_levels">Niveles</string>
    <string name="textNoLevels">No hay niveles</string>

    <string name="buttonGoBack">Atrás</string>
    <string name="buttonYes">Sí</string>
    <string name="buttonNo">No</string>

    <string name="pref_title_semantica">Semántica</string>
    <string name="pref_title_lectura">Lectura</string>
    <string name="pref_title_pragmatica">Pragmática</string>

    <string name="pref_title_text_size">Tamaño</string>
    <string name="pref_title_time_shown">Tiempo</string>
    <string name="pref_title_text_type">Tipo</string>
    <string name="textPreguntaDenominacion">¿Contestó correctamente?</string>
    <string name="pref_title_obtenerReporte">Obtener reporte</string>
    <string name="subjectReport">Reporte generado automaticamente.</string>
    <string name="bodyReport">Reporte</string>
    <string name="pref_summary_name">Ingrese el nombre del paciente</string>
    <string name="pref_summary_lastname">Ingrese el apellido del paciente</string>
    <string name="pref_title_lastname">Apellido</string>
    <string name="pref_title_name">Nombre</string>
    <string name="explanationIntruso">Presione prolongadamente la palabra/imagen que considere correcta y sin soltarla arrástrela hacia el cesto de basura, donde podrá soltar la misma.</string>
    <string name="buttonOk">Entendido</string>
    <string name="pref_user">Datos del paciente</string>
    <string name="pref_title_catreset">Reiniciar categorías</string>
    <string name="explanationIntrusoWithoutDD">Presione la palabra/imagen que considere correcta.</string>
    <string name="pref_title_newtask">Crear ejercicio</string>
    <string name="title_activity_taskcreator">Crear ejercicios</string>
    <string name="buttonSave">Guardar</string>
    <string name="hintInputQuestion">Consigna</string>
    <string name="hintInputOptionCorrect">Opción correcta</string>
    <string name="hintInputOption">Opción incorrecta</string>
    <string name="errorMissingInput">Error - Complete todos los campos</string>
    <string name="taskCreated">Ejercicio creado</string>
</resources>
